// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render skip 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="skipButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        null,
        Array [
          Object {
            "padding": 15,
          },
          undefined,
        ],
        null,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0)",
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              undefined,
            ],
          ],
        ]
      }
    >
      SKIP
    </Text>
  </View>
</View>
`;

exports[`renders skip with style 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="skipButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        null,
        Array [
          Object {
            "padding": 15,
          },
          Object {
            "padding": 5,
          },
        ],
        null,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0)",
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              undefined,
            ],
          ],
        ]
      }
    >
      SKIP
    </Text>
  </View>
</View>
`;

exports[`renders skip with text style 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="skipButton"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        null,
        Array [
          Object {
            "padding": 15,
          },
          undefined,
        ],
        null,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0)",
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "textAlign": "center",
            },
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "padding": 5,
              },
            ],
          ],
        ]
      }
    >
      SKIP
    </Text>
  </View>
</View>
`;
